[package]
name = "roast-me-jam"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy_registry_export = "0.3.1"
bevy_asset_loader = { version = "0.20.1", features = ["2d"] }
log = "0.4.21"
bevy_text_animation = "0.1.14"
bevy_editor_pls = "0.8.1"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[build]
rustflags = ["--cfg=web_sys_unstable_apis"]
